# backend/internal/model/user.go
@@ -5,7 +5,7 @@ import "time"
 type User struct {
 	ID                 string    `db:"id" json:"id"`
 	Email              string    `db:"email" json:"email"`
-	Password           string    `db:"password"`
+	Password           string    `db:"password" json:"-"`
 	MustChangePassword bool      `db:"must_change_password" json:"must_change_password"`
 	FirstName          string    `db:"first_name" json:"first_name"`
 	LastName           string    `db:"last_name" json:"last_name"`
